--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,14 @@ font-family: 'Libre Franklin', sans-serif;
 ----------------------------------------------*/
 
 /*-------------fonts--------------------------*/
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  overflow-x: hidden;
+}
 
 h1, h2, h3, h4  {
   font-family: 'Libre Franklin', sans-serif;
@@ -25,12 +33,109 @@ p {
   font-family: 'Dosis', sans-serif;
 }
 
-/*----------navigation---------------*/
-
-.topnav {
+/*---------header--------------------*/
+/* header  {
+  max-height: 455px;
+  overflow-x: hidden;
+} */
+.promo  {
   display: flex;
   justify-content: center;
+}
+
+.promo video  {
+  position: absolute;
+  top: 71px;
+}
+
+.video-overlay  {
+  position: absolute;
+  top: 71px;
+  width: 100%;
+  height: 384px;
+  background-color: #17232a;
+  opacity: 0.75;
+}
+
+.nameAndpos {
+  position: absolute;
+  text-align: center;
+  width: 600px;
+  top: 200px;
+  left: 50%;
+  margin-left: -300px;
+  font-size: 15px;
+}
+
+.nameAndpos h1 {
+  font-size: 5em;
+  color: white;
+  font-style: normal;
+  margin-bottom: 0em;
+  margin-top: 0;
+}
+
+.nameAndpos h2 {
+  font-size: 2em;
+  color: #ea3f60;
+  font-style: italic;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+@media screen and (min-width: 433px) and (max-width: 631px) {
+  .nameAndpos {
+    font-size: 10px;
+  }
+
+  .promo video  {
+    position: absolute;
+    top: 68px;
+    min-width: 1740px;
+    height: 348px;
+  }
+
+  .video-overlay  {
+    top: 68px;
+    width: 100%;
+    height: 348px;
+  }
+
+}
+
+@media screen and (max-width:432px) {
+  .nameAndpos {
+    font-size: 8px;
+    top: 140px;
+  }
+
+  .promo video  {
+    position: absolute;
+    top: 76px;
+    min-width: 980px;
+    height: 196px;
+  }
+
+  .video-overlay  {
+    top: 76px;
+    width: 100%;
+    height: 196px;
+  }
+}
+
+/*----------navigation---------------*/
+.topnav {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
   background-color: #2e4554;
+  opacity: 0.97;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%
 }
 
 .topnav a {
@@ -41,6 +146,10 @@ p {
   font-weight: bold;
   background-color: #2e4554;
   transition: background-color .2s;
+}
+
+.navText  {
+  g
 }
 
 .topnav a:hover {
@@ -67,9 +176,35 @@ p {
   transition: .2s;
 }
 
-@media (max-width: 695px) {
+@media screen and (min-width: 433px) and (max-width: 631px) {
   .topnav a {
     padding: 25px 10px;
     font-size: 14px;
   }
+}
+
+@media screen and (max-width: 432px) {
+  .topnav {
+    flex-wrap: wrap;
+  }
+
+  .topnav a {
+    padding: 10px 15px;
+    font-size: 14px;
+  }
+
+  .redLine {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    height: 2px;
+    top: 5px;
+  }
+}
+
+/*----------main---------------*/
+
+main  {
+  position: absolute;
+  top: 800px;
 }
