--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,9 @@ html {
   box-sizing: inherit;
 }
 
-body {
+html, body {
   margin: 0;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
 
 h1, h2, h3, h4  {
@@ -45,16 +45,10 @@ p {
 
 .promo video  {
   position: absolute;
-  top: 71px;
-}
-
-.video-overlay  {
-  position: absolute;
-  top: 71px;
-  width: 100%;
-  height: 384px;
-  background-color: #17232a;
-  opacity: 0.75;
+  top: 0px;
+  object-fit: cover;
+  width: 100vw;
+  height: 454px;
 }
 
 .nameAndpos {
@@ -83,46 +77,6 @@ p {
   margin-bottom: 0;
 }
 
-@media (min-width: 433px) and (max-width: 631px) {
-  .nameAndpos {
-    font-size: 10px;
-  }
-
-  .promo video  {
-    position: absolute;
-    top: 68px;
-    min-width: 1740px;
-    height: 348px;
-  }
-
-  .video-overlay  {
-    top: 68px;
-    width: 100%;
-    height: 348px;
-  }
-
-}
-
-@media (max-width:432px) {
-  .nameAndpos {
-    font-size: 8px;
-    top: 140px;
-  }
-
-  .promo video  {
-    position: absolute;
-    top: 76px;
-    min-width: 980px;
-    height: 196px;
-  }
-
-  .video-overlay  {
-    top: 76px;
-    width: 100%;
-    height: 196px;
-  }
-}
-
 /*----------navigation---------------*/
 .topnav {
   display: flex;
@@ -130,7 +84,7 @@ p {
   justify-content: center;
   align-items: center;
   background-color: #2e4554;
-  opacity: 0.95;
+  opacity: 0.92;
   position: fixed;
   top: 0;
   left: 0;
@@ -176,14 +130,60 @@ p {
   transition: .2s;
 }
 
+
+/*----------main---------------*/
+
+main  {
+  position: absolute;
+  top: 455px;
+}
+
+/*----------responsive---------------*/
+
 @media (min-width: 433px) and (max-width: 631px) {
+  .nameAndpos {
+    width: 400px;
+    margin-left: -200px;
+    font-size: 10px;
+  }
+
+  .promo video  {
+    position: absolute;
+    max-width: 100vw;
+    height: 416px;
+  }
+
   .topnav a {
     padding: 25px 10px;
     font-size: 14px;
   }
+
+  main  {
+    top: 416px;
+  }
 }
 
-@media (max-width: 432px) {
+@media (max-width:432px) {
+  .nameAndpos {
+    width: 280px;
+    margin-left: -140px;
+    font-size: 8px;
+    top: 140px;
+
+  }
+
+  .promo video  {
+    position: absolute;
+    object-fit: cover;
+    max-width: 100vw;
+    height: 272px;
+  }
+
+  .video-overlay  {
+    top: 76px;
+    width: 100%;
+    height: 196px;
+  }
   .topnav {
     flex-wrap: wrap;
   }
@@ -200,23 +200,9 @@ p {
     height: 2px;
     top: 5px;
   }
-}
 
-/*----------main---------------*/
-
-main  {
-  position: absolute;
-  top: 455px;
-}
-
-@media (min-width: 433px) and (max-width: 631px) {
-  main  {
-    top: 416px;
-  }
-}
-
-@media (max-width: 432px) {
   main  {
     top: 272px;
   }
+
 }
