--- a/css/styles.css
+++ b/css/styles.css
@@ -225,7 +225,7 @@ p {
 }
 
 #experience {
-  background: linear-gradient(rgba(23, 35, 42, 0.95),rgba(23, 35, 42, 0.65)), url("../images/office.jpg") center no-repeat;
+  background: linear-gradient(rgba(23, 35, 42, 0.95),rgba(23, 35, 42, 0.65)), url("../images/office.jpg") fixed center no-repeat;
   background-size: cover;
   transform: translate3d(0,0,0);
   padding: 80px 0;
