--- a/css/styles.css
+++ b/css/styles.css
@@ -224,8 +224,18 @@ p {
   margin-bottom: 160px;
 }
 
-#experience {
+.desktop {
   background: linear-gradient(rgba(23, 35, 42, 0.95),rgba(23, 35, 42, 0.65)), url("../images/office.jpg") center no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  transform: translate3d(0,0,0);
+  padding: 80px 0;
+  z-index: -10;
+}
+
+.mobile {
+  background: linear-gradient(rgba(23, 35, 42, 0.95),rgba(23, 35, 42, 0.65)), url("../images/office.jpg") center no-repeat;
+  background-attachment: scroll;
   background-size: cover;
   transform: translate3d(0,0,0);
   padding: 80px 0;
