--- a/css/grid.css
+++ b/css/grid.css
@@ -5,7 +5,7 @@
   width: 100%;
   top: 0;
   display: flex;
-  height: 400px;
+  height: 392px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -42,30 +42,20 @@
 }
 
 .box01 .box img {
+  margin: 0;
   width: 1200px;
 }
 
-.box02 .box img {
+.box02 .box img, .box03 .box img, .box05 .box img {
+  margin: 0;
   height: 392px;
-  margin-left: -140px;
-}
-
-.box03 .box img {
-  margin-left: -200px;
-  margin-top: -50px;
-  height: 50%;
+  margin-left: -152.44px;
 }
 
 .box04 .box img {
   margin-left: -250px;
   margin-top: -50px;
   width: 300%;
-}
-
-.box05 .box img {
-  margin-left: -200px;
-  margin-top: -50px;
-  width: 200%;
 }
 
 .box06 .box img {
@@ -88,11 +78,14 @@
 }
 
 .box10 .box img {
-  margin-left: -100px;
-  height: 392px;
+  margin-top: -120px;
+  margin-left: -200px;
+  height: 550px;
 }
 
 .box11 .box img {
+  margin: 0;
+  margin-top: -27.875px;
   width: 796px;
 }
 
@@ -226,77 +219,78 @@
 @media (min-width: 911px) and (max-width: 1280px) {
 
   .box > .overlay {
-    height: 424px;
+    height: 281.33px;
   }
 
   .box06 .box .overlay  {
-    height: 424px;
+    height: 281.33px;
+  }
+
+  .gridtext {
+    max-width: 90%;
+  }
+
+  .gridtext h3  {
+    font-size: 26px;
+  }
+
+  .gridtext h4  {
+    font-size: 16px;
+  }
+
+  .overlay i  {
+    font-size: 100px;
   }
 
   .box01 .box img {
     width: 860px;
   }
 
-  .box02 .box img {
-    margin-left: -160px;
-    height: 424px;
-  }
-
-  .box03 .box img {
-    margin-left: -200px;
-    margin-top: -50px;
-    width: 200%;
+  .box02 .box img, .box03 .box img, .box05 .box img, .box06 .box img, .box07 .box img, .box09 .box img, .box10 .box img {
+    margin: 0;
+    margin-left: -109.4px;
+    height: 281.33px;
   }
 
   .box04 .box img {
     margin-left: -250px;
-    margin-top: -50px;
-    width: 300%;
-  }
-
-  .box05 .box img {
-    margin-left: -200px;
-    margin-top: -50px;
-    width: 200%;
-  }
-
-  .box06 .box img {
-    margin-left: -200px;
-    height: 424px;
+    margin-top: -100px;
+    height: 560px;
   }
 
   .box07 .box img {
-    margin-left: -300px;
-    height: 424px;
+    margin-left: -220px;
+    height: 300.33px;
   }
 
   .box08 .box img {
-    height: 424px;
+    height: 281.33px;
   }
 
   .box09 .box img {
-    margin-left: -100px;
-    height: 424px;
+    margin-left: -80px;
   }
 
   .box10 .box img {
     margin-left: -100px;
-    height: 424px;
+    margin-top: -80px;
+    height: 380px;
   }
 
   .box11 .box img {
-    height: 424px;
+    width: 100%;
+    margin-top: -101.21px;
   }
 
   .thegrid  {
     width: 860px;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 424px;
-    grid-gap: 12px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: 281.33px;
+    grid-gap: 8px;
   }
 
   .box01  {
-    grid-column: 1/3;
+    grid-column: 1/4;
     grid-row: 1/2;
     overflow: hidden;
   }
@@ -314,50 +308,50 @@
   }
 
   .box04  {
-    grid-column: 1/2;
-    grid-row: 3/4;
+    grid-column: 3/4;
+    grid-row: 2/3;
     overflow: hidden;
   }
 
   .box05  {
-    grid-column: 2/3;
+    grid-column: 1/2;
     grid-row: 3/4;
     overflow: hidden;
   }
 
   .box06  {
-    grid-column: 1/2;
-    grid-row: 4/5;
+    grid-column: 2/3;
+    grid-row: 3/4;
     overflow: hidden;
   }
 
   .box07  {
-    grid-column: 2/3;
-    grid-row: 4/5;
+    grid-column: 3/4;
+    grid-row: 3/4;
     overflow: hidden;
   }
 
   .box08  {
     grid-column: 1/2;
-    grid-row: 5/6;
+    grid-row: 4/5;
     overflow: hidden;
   }
 
   .box09  {
     grid-column: 2/3;
-    grid-row: 5/6;
+    grid-row: 4/5;
     overflow: hidden;
   }
 
   .box10  {
-    grid-column: 1/2;
-    grid-row: 6/7;
+    grid-column: 3/4;
+    grid-row: 4/5;
     overflow: hidden;
   }
 
   .box11  {
-    grid-column: 2/3;
-    grid-row: 6/7;
+    grid-column: 1/4;
+    grid-row: 5/6;
     overflow: hidden;
   }
 
@@ -366,50 +360,73 @@
 @media (min-width: 624px) and (max-width: 910px) {
 
   .box > .overlay {
-    height: 50vw;
+    height: 276px;
   }
 
   .box06 .box .overlay  {
-    height: 50vw;
+    height: 276px;
+  }
+
+  .gridtext {
+    max-width: 90%;
+  }
+
+  .gridtext h3  {
+    font-size: 26px;
+  }
+
+  .gridtext h4  {
+    font-size: 16px;
+  }
+
+  .overlay i  {
+    font-size: 100px;
   }
 
   .box01 .box img {
-    margin: 0;
-    max-width: 100vw;
-    max-height: 56.25vw;
+    width: 560px;
   }
 
-  .box02 .box img, .box03 .box img, .box05 .box img, .box06 .box img {
-    margin-left: -20vw;
-    margin-top: 0;
-    height: 50vw;
+  .box02 .box img, .box03 .box img, .box05 .box img, .box06 .box img, .box07 .box img, .box09 .box img, .box10 .box img, .box11 .box img {
+    margin: 0;
+    margin-left: -107.33px;
+    height: 276px;
   }
 
   .box04 .box img {
-    width: 150vw;
-    margin-left: -25vw;
-    margin-top: -8vw;
+    margin-left: -250px;
+    margin-top: -100px;
+    height: 560px;
   }
 
   .box07 .box img {
-    margin-left: -35vw;
-    height: 50vw;
+    margin-left: -220px;
+    height: 300px;
   }
 
-  .box08 .box img, .box11 .box img {
-    height: 50vw;
+  .box08 .box img {
+    height: 276px;
   }
 
-  .box09 .box img, .box10 .box img {
-    margin-left: -15vw;
-    height: 50vw;
+  .box09 .box img {
+    margin-left: -80px;
+  }
+
+  .box10 .box img {
+    margin-left: -100px;
+    margin-top: -80px;
+    height: 380px;
+  }
+
+  .box11 .box img {
+    width: auto;
   }
 
   .thegrid  {
-    width: 100vw;
+    width: 560px;
     grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: 50vw;
-    grid-gap: 0px;
+    grid-auto-rows: 276px;
+    grid-gap: 8px;
   }
 
   .box01  {
@@ -484,11 +501,12 @@
 
   .overlay {
     flex-direction: row-reverse;
-    height: 50vw;
+    /* align-content: center; */
+    height: 36vw;
   }
 
   .box06 .box .overlay  {
-    height: 50vw;
+    height: 36vw;
   }
 
   .gridtext {
@@ -507,6 +525,7 @@
   }
 
   .overlay i {
+    margin: 0;
     margin-right: 20px;
   }
 
@@ -516,23 +535,49 @@
     height: auto;
   }
 
+  .box03 .box img {
+    margin-top: -10.125vw;
+  }
+
   .box04 .box img {
     width: 150vw;
     margin-left: -25vw;
-    margin-top: -8vw;
+    margin-top: -18vw;
+  }
+
+  .box05 .box img {
+    margin-top: -20.25vw;
+  }
+
+  .box07 .box img {
+    margin-top: -10.125vw;
   }
 
   .box08 .box img {
     width: 100%;
     height: auto;
-    margin-top: -20vw;
+    margin-top: -30vw;
+  }
+
+  .box09 .box img {
+    margin-top: -6vw;
+  }
+
+  .box10 .box img {
+    width: 130%;
+    margin-left: -10vw;
+    margin-top: -10.125vw;
+  }
+
+  .box11 .box img {
+    margin-top: -10.125vw;
   }
 
   .thegrid  {
     width: 100vw;
     grid-template-columns: 100%;
-    grid-auto-rows: 50vw;
-    grid-gap: 0px;
+    grid-auto-rows: 36vw;
+    grid-gap: 2px;
   }
 
   .box01  {
@@ -603,7 +648,7 @@
 
 }
 
-@media (max-width: 403px) {
+@media (min-width: 371px) and (max-width: 553px) {
   .gridtext h3  {
     font-size: 24px;
   }
@@ -615,5 +660,20 @@
   .overlay i {
     margin-right: 20px;
     font-size: 80px;
+  }
+}
+
+@media (max-width: 370px) {
+  .gridtext h3  {
+    font-size: 20px;
+  }
+
+  .gridtext h4  {
+    font-size: 12px;
+  }
+
+  .overlay i {
+    margin-right: 20px;
+    font-size: 65px;
   }
 }
