--- a/css/notgrid.css
+++ b/css/notgrid.css
@@ -7,7 +7,7 @@
 }
 
 .thegrid  {
-  margin-top: 28px;
+  margin: 0;
 }
 
 .box01, .box02, .box03, .box04, .box05, .box06, .box07, .box08, .box09, .box10, .box11 {
@@ -129,10 +129,6 @@
 
 @media (min-width: 911px) and (max-width: 1280px) {
 
-  .thegrid  {
-    margin-top: 32px;
-  }
-
   .box01, .box02, .box03, .box04, .box05, .box06, .box07, .box08, .box09, .box10, .box11 {
     width: 860px;
     height: 280px;
@@ -162,10 +158,6 @@
 }
 
 @media (min-width: 624px) and (max-width: 910px) {
-
-  .thegrid  {
-    margin-top: 32px;
-  }
 
   .box01, .box02, .box03, .box04, .box05, .box06, .box07, .box08, .box09, .box10, .box11 {
     width: 560px;
@@ -202,10 +194,6 @@
 }
 
 @media (max-width: 623px) {
-
-  .thegrid  {
-    margin-top: 38px;
-  }
 
   .box01, .box02, .box03, .box04, .box05, .box06, .box07, .box08, .box09, .box10, .box11 {
     width: 100vw;
