--- a/css/responsive.css
+++ b/css/responsive.css
@@ -392,7 +392,7 @@
   .level-bar {
     margin-left: 0px;
     position: relative;
-    width: 250px;
+    width: 80vw;
     height: 20px;
     background-color: #2e4554;
     border: 2px solid;
@@ -401,6 +401,13 @@
     font-family: 'Dosis', sans-serif;
     font-weight: bold;
     font-size: 16px;
+  }
+
+  @media (max-width: 370px) {
+    #skill h3, #skill h4, #skill p {
+      font-size: 95%;
+    }
+
   }
 
 }
