--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ p, h4 {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 999;
+  z-index: 99;
 }
 
 .topnav a {
@@ -277,21 +277,12 @@ Here use > combinator to select h2, h3, h4 and p that are children of either tit
   color: #dbecf8;
 }
 
+/* --------------------skill swipper-------------------- */
+
 #skill  {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: auto;
   padding-top: 80px;
   margin-top: 80px;
 }
-
-#skill > .text-warpper {
-  margin: auto;
-  width: 1200px;
-}
-
-/* --------------------skill swipper-------------------- */
 
 .skill-title  {
   width: 1200px;
@@ -421,8 +412,150 @@ Here use > combinator to select h2, h3, h4 and p that are children of either tit
 #feLevel {
   position: absolute;
   top: 0;
-  width: 60%;
+  width: 65%;
   height: 100%;
   background-color: #dbecf8;
   color: #17232a;
+}
+
+/*--------------------contact---------------------------*/
+#contact  {
+  padding-top: 80px;
+  margin-top: 80px;
+  margin-bottom: 120px;
+}
+
+.contact-title  {
+  width: 560px;
+  margin: 0 auto;
+}
+
+.contact-warpper  {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.contact-content  {
+  width: 560px;
+}
+
+.contact-content p {
+  margin-bottom: 20px;
+}
+
+.contact-content i {
+  width: 60px;
+  font-size: 30px;
+}
+
+/* quick submit form */
+
+.contact-form {
+	max-width:560px;
+	width:100%;
+	margin:0 auto;
+	position:relative;
+}
+
+#qcf input[type="text"], #qcf input[type="email"], #qcf input[type="tel"], #qcf input[type="url"], #qcf textarea, #qcf button[type="submit"] {
+  font:400 1.2em "Lato", Helvetica, Arial, sans-serif;
+}
+
+#qcf {
+	background:#dbecf8;
+	padding:25px;
+	margin:50px 0;
+}
+
+#qcf h3 {
+	color: #2e4554;
+  font-size: 30px;
+  margin-bottom: 20px;
+}
+
+#qcf h4 {
+	margin:5px 0 15px;
+	display:block;
+	font-size:13px;
+}
+
+fieldset {
+	border: medium none !important;
+	margin: 0 0 10px;
+	min-width: 100%;
+	padding: 0;
+	width: 100%;
+}
+
+#qcf input[type="text"], #qcf input[type="email"], #qcf input[type="tel"], #qcf input[type="url"], #qcf textarea {
+	width:100%;
+	border:1px solid #CCC;
+	background:#FFF;
+	padding:10px;
+}
+
+#qcf input[type="text"]:hover, #qcf input[type="email"]:hover, #qcf input[type="tel"]:hover, #qcf input[type="url"]:hover, #qcf textarea:hover {
+	-webkit-transition:border-color 0.3s ease-in-out;
+	-moz-transition:border-color 0.3s ease-in-out;
+	transition:border-color 0.3s ease-in-out;
+	border:1px solid #AAA;
+}
+
+#qcf textarea {
+	height:100px;
+	max-width:100%;
+  resize:none;
+}
+
+#qcf button[type="submit"] {
+	cursor:pointer;
+	width:100%;
+	border:none;
+	background:#45677e;
+	color:#FFF;
+	margin:0 0 5px;
+	padding:10px;
+	font-size:18px;
+}
+
+#qcf button[type="submit"]:hover {
+	background:#17232a;
+	-webkit-transition:background 0.3s ease-in-out;
+	-moz-transition:background 0.3s ease-in-out;
+	transition:background-color 0.3s ease-in-out;
+}
+
+#qcf button[type="submit"]:active { box-shadow:inset 0 1px 3px rgba(0, 0, 0, 0.5); }
+
+#qcf input:focus, #qcf textarea:focus {
+	outline:0;
+	border:1px solid #999;
+}
+::-webkit-input-placeholder {
+ color:#888;
+}
+:-moz-placeholder {
+ color:#888;
+}
+::-moz-placeholder {
+ color:#888;
+}
+:-ms-input-placeholder {
+ color:#888;
+}
+
+
+/* copyright */
+
+#copyright  {
+  background: linear-gradient(#2e4554, #45677e);
+  padding: 15px 0;
+}
+
+#copyright p {
+  font-size: 15px;
+  text-align: center;
+  max-width: 50vw;
+  color: #dbecf8;
 }
